# ParallelMapReduce

./: CMakeLists.txt  Makefile  README  README_BONUS  main.cpp  map_reduce.cpp  map_reduce.h  mapper.cpp  mapper.h  reducer.cpp  reducer.h  workpool.cpp  workpool.h
